--- a/src/components/HomePage/index.scss
+++ b/src/components/HomePage/index.scss
@@ -8,13 +8,13 @@ $primary-color: #7828B4;
     box-sizing: border-box;
     padding: 2rem 0;
     padding-left: 4rem;
-    width: 30%;
+    width: 360px;
     font-family: Optima-ExtraBlack;
     font-size: 36px;
     color: #FFFFFF;
   }
   .explore{
-    width: 70%;
+    width: calc(100% - 360px);
     color: #fff;
     position: relative;
     .search-icon{
@@ -55,13 +55,14 @@ $primary-color: #7828B4;
   width: calc(100% + 4.4rem);
   border-bottom: 1px solid #d7d7d7;
 }
+
 .content{
   background: #F2F2F2;
   height: 100%;
   display: flex;
   .sidebar{
     box-sizing: border-box;
-    width: 30%;
+    width: 360px;
     padding: 0 2.2rem;
     .sidebar-container{
       background-color: #EBEBEB;
@@ -91,9 +92,9 @@ $primary-color: #7828B4;
           display: flex;
           .form-title{
             width: 25%;
+            box-sizing: border-box;
+            padding-right: 10px;
             label{
-              box-sizing: border-box;
-              padding-right: 10px;
               display: inline-block;
               line-height: 2rem;
               width: 100%;
@@ -120,10 +121,104 @@ $primary-color: #7828B4;
           }
         }
       }
-
+      .sidebar-categories-form{
+        padding-bottom: 1rem;
+      }
     }
   }
+
+
   .main{
-    width: 70%;
+    width: calc(100% - 360px);
+    .main-title-text{
+      font-family: Roboto-Regular;
+      font-size: 24px;
+      color: #000000;
+      margin-top: 1.2rem;
+      margin-bottom: 0.8rem;
+    }
+    .main-title-tags{
+      display: inline-block;
+      .title-tag{
+        font-family: Roboto-Italic;
+        font-size: 16px;
+        color: #9013FE;
+        border: 1px solid #9013fe;
+        padding: 0.4rem;
+        border-radius: 100px;
+        padding: 0.4rem 1rem;
+      }
+    }
+    .activities{
+      margin-top: 1.5rem;
+      .activity{
+        margin-bottom: 1.5rem;
+        display: flex;
+        .activity-image{
+          width: 220px;
+          height: 220px;
+          background-image: url('https://fakeimg.pl/250x100');
+          background-size: cover;
+          background-position: center;
+        }
+        .main-content{
+          box-sizing: border-box;
+          width: calc(100% - 220px);
+          padding: 1rem 1.2rem;
+          background-color: #fff;
+          .activity-title{
+            font-weight: bold;
+            font-family: Roboto-Bold;
+            font-size: 24px;
+            color: #9013FE;
+            line-height: 36px;
+          }
+          .activity-describe{
+            font-family: Roboto-Regular;
+            font-size: 16px;
+            color: #000000;
+            line-height: 24px;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            margin: 1rem 0;
+          }
+          .activity-detail{
+            display: flex;
+            align-items: center;
+            margin: 0.7rem 0;
+            .activity-organizer{
+              font-weight: bold;
+              font-family: Roboto-Bold;
+              font-size: 16px;
+              color: #000000;
+            }
+            .activity-tag{
+              margin-left: 1rem;
+              border-radius: 100px;
+              padding: 0.2rem 0.8rem;
+              background-color: #d7d7d7;
+              font-family: Roboto-Italic;
+              font-size: 16px;
+              color: #FFFFFF;
+              text-align: center;
+            }
+            .activity-address{
+              font-family: Roboto-Regular;
+              font-size: 16px;
+              color: #9B9B9B;
+            }
+            .activity-date{
+              margin-left: 1rem;
+              font-family: Roboto-Regular;
+              font-size: 16px;
+              color: #9B9B9B;
+            }
+
+          }
+        }
+      }
+    }
   }
 }
