--- a/src/components/HomePage/index.scss
+++ b/src/components/HomePage/index.scss
@@ -138,8 +138,9 @@ $primary-color: #7828B4;
       margin-bottom: 0.8rem;
     }
     .main-title-tags{
-      display: inline-block;
+      display: flex;
       .title-tag{
+        margin-right: 1rem;
         font-family: Roboto-Italic;
         font-size: 16px;
         color: #9013FE;
