--- a/src/components/HomePage/index.scss
+++ b/src/components/HomePage/index.scss
@@ -27,7 +27,7 @@ $primary-color: #7828B4;
       border: 0;
       background-color: transparent;
       border-bottom: 1px solid #fff;
-      width: 388px;
+      width: 330px;
       font-size: 1.2rem;
       padding-bottom: 0.5rem;
       padding-left: 2.5rem;
@@ -129,6 +129,8 @@ $primary-color: #7828B4;
 
 
   .main{
+    padding-right: 2.2rem;
+    box-sizing: border-box;
     width: calc(100% - 360px);
     .main-title-text{
       font-family: Roboto-Regular;
