--- a/src/components/HomePage/index.scss
+++ b/src/components/HomePage/index.scss
@@ -181,11 +181,19 @@ $primary-color: #7828B4;
             font-size: 16px;
             color: #000000;
             line-height: 24px;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
+            display: block;
+            height: 3rem;
             overflow: hidden;
             margin: 1rem 0;
+            position: relative;
+            padding-right: 1rem;
+            .describe-readmore{
+              position: absolute;
+              right: 0;
+              bottom: 0;
+              z-index: 1;
+              background-color: #fff;
+            }
           }
           .activity-detail{
             display: flex;
