sidebar plus minus icon control

--- a/src/components/HomePage/index.scss
+++ b/src/components/HomePage/index.scss
@@ -74,6 +74,7 @@ $primary-color: #7828B4;
         padding-top: 1.5rem;
         padding-bottom: 1rem;
         font-weight: bold;
+        position: relative;
       }
       .sidebar-location{
         select{
