add header input rwd

--- a/src/components/HomePage/mediaQuery.scss
+++ b/src/components/HomePage/mediaQuery.scss
@@ -51,6 +51,45 @@
 }
 
 @media screen and (max-width: 767px){
+  .header{
+    display: block;
+    .logo{
+      text-align: center;
+      margin: 0 auto;
+      padding-left: 0;
+    }
+    .explore{
+      width: 100%;
+      box-sizing: border-box;
+      background-color: #EBEBEB;
+      box-shadow: 0 5px 10px 0 #D7D7D7;
+      color: #000;
+      padding: 1rem 0;
+      padding-left: 2.2rem;
+      input{
+        font-size: 20px;
+        width: calc(100% - 4.4rem);
+        color: #000;
+        border-bottom: 1px solid #000;
+      }
+      ::placeholder {
+        font-family: Roboto-Italic;
+        font-size: 20px;
+        color: #9b9b9b;
+      }
+      :-ms-input-placeholder { /* Internet Explorer 10-11 */
+        font-family: Roboto-Italic;
+        font-size: 20px;
+        color: #9b9b9b;
+      }
+
+      ::-ms-input-placeholder { /* Microsoft Edge */
+        font-family: Roboto-Italic;
+        font-size: 20px;
+        color: #9b9b9b;
+      }
+    }
+  }
   .content{
     display: block;
     .sidebar{
