fix activity.active bug

--- a/src/components/HomePage/index.scss
+++ b/src/components/HomePage/index.scss
@@ -194,6 +194,9 @@ $primary-color: #7828B4;
               background-color: #fff;
             }
           }
+          .activity-describe-active{
+            height: auto;
+          }
           .activity-detail{
             display: flex;
             align-items: center;
